--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
+    "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000",
     "build": "webpack -p --progress --colors",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
@@ -37,6 +37,13 @@
     "react-hot-loader": "^4.0.0",
     "style-loader": "^0.20.2",
     "ts-loader": "^4.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.6.0",
+    "tslint-plugin-prettier": "^1.3.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^2.7.2",
     "url-loader": "^1.0.0-beta.0",
     "webpack": "^4.19.0",
