--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-hot-middleware": "^2.21.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
     "classnames": "^2.2.5",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
