--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.5",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
