--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
+    "@types/material-ui": "^0.21.5",
     "classnames": "^2.2.5",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
