--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@material-ui/icons": "^3.0.1",
     "@types/material-ui": "^0.21.5",
     "classnames": "^2.2.5",
+    "firebase": "^5.5.0",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
     "mobx-react-router": "^4.0.1",
