--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/webpack": "^3.8.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.3",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
@@ -52,7 +53,8 @@
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
-    "webpack-hot-middleware": "^2.21.1"
+    "webpack-hot-middleware": "^2.21.1",
+    "write-file-webpack-plugin": "^4.4.0"
   },
   "dependencies": {
     "@material-ui/core": "^3.1.0",
