--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^1.1.11",
     "firebase-tools": "^4.2.1",
     "html-loader": "^1.0.0-alpha.0",
+    "html-replace-webpack-plugin": "^2.5.3",
     "html-webpack-plugin": "^3.0.4",
     "mobx-react-devtools": "^4.2.15",
     "postcss": "^6.0.19",
